--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,7 +9,6 @@ env:
   AWS_REGION: ap-southeast-2
   ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-southeast-2.amazonaws.com
   SERVICE_NAME: "khushi"
-
   BACKEND_SERVICE: "backend"
 
 permissions:
@@ -36,9 +35,9 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       # --------------------------------------------------------------------
-      # 🚀 FRONTEND BUILD & PUSH
+      # 🚀 FRONTEND: Build + Push + Update YAML
       # --------------------------------------------------------------------
-      - name: 🛠 Build and Push Docker Image (Frontend - Khushi)
+      - name: 🛠 Build and Push Docker Image (Frontend)
         run: |
           set -e
           IMAGE_TAG="${GITHUB_SHA}"
@@ -46,7 +45,7 @@ jobs:
           REPO_NAME="shopping-site-${SERVICE_NAME}"
           IMAGE_URI="$ECR_REGISTRY/$REPO_NAME:$IMAGE_TAG"
 
-          echo "🚀 Building ${SERVICE_NAME} frontend..."
+          echo "🚀 Building Frontend..."
           aws ecr describe-repositories --repository-names $REPO_NAME >/dev/null 2>&1 || \
             aws ecr create-repository --repository-name $REPO_NAME
 
@@ -56,48 +55,49 @@ jobs:
           sed -i "s|image:.*|image: $IMAGE_URI|g" "$FOLDER/deployment.yml"
 
       # --------------------------------------------------------------------
-      # 🚀 BACKEND BUILD & PUSH
+      # 🚀 BACKEND: Build + Push + Update YAML
       # --------------------------------------------------------------------
       - name: 🛠 Build and Push Docker Image (Backend)
         run: |
           set -e
           IMAGE_TAG="${GITHUB_SHA}"
           FOLDER="backend"
-          REPO_NAME="shopping-site-${BACKEND_SERVICE}"
+          REPO_NAME="shopping-site-backend"
           IMAGE_URI="$ECR_REGISTRY/$REPO_NAME:$IMAGE_TAG"
 
-          echo "🚀 Building backend..."
+          echo "🚀 Building Backend..."
           aws ecr describe-repositories --repository-names $REPO_NAME >/dev/null 2>&1 || \
             aws ecr create-repository --repository-name $REPO_NAME
 
           docker build -t $IMAGE_URI $FOLDER
           docker push $IMAGE_URI
 
-          sed -i "s|image:.*|image: $IMAGE_URI|g" "$FOLDER/deployment.yml"
+          # Update only backend-deployment.yml
+          sed -i "s|image:.*|image: $IMAGE_URI|g" "$FOLDER/backend-deployment.yml"
 
       # --------------------------------------------------------------------
-      # 🔄 COMMIT FRONTEND + BACKEND YAML UPDATES
+      # 🔄 COMMIT UPDATED YAML FILES
       # --------------------------------------------------------------------
-      - name: 🔄 Commit updated YAML files
+      - name: 🔄 Commit updated YAMLs
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
           git add frontend/${SERVICE_NAME}/deployment.yml
-          git add backend/deployment.yml
+          git add backend/backend-deployment.yml
 
-          git commit -m "🔄 Update image tags for frontend & backend [skip ci]" || echo "⚠️ No YAML changes"
-          git push origin main || echo "⚠️ No changes to push"
+          git commit -m "🔄 Update image tags for frontend & backend [skip ci]" || echo "⚠️ Nothing to commit"
+          git push origin main || echo "⚠️ No push required"
 
       # --------------------------------------------------------------------
-      # 🧠 Skip CI loop
+      # 🧠 Prevent CI Loop
       # --------------------------------------------------------------------
-      - name: 🧠 Skip loop if commit was automated
+      - name: 🧠 Skip if auto-commit
         if: contains(github.event.head_commit.message, '[skip ci]')
-        run: echo "Skipping re-triggered build due to [skip ci] commit"
+        run: echo "⏭️ Skipping auto-triggered workflow"
 
       # --------------------------------------------------------------------
-      # 🚀 DEPLOY TO EC2
+      # 🚀 Deploy to EC2
       # --------------------------------------------------------------------
       - name: 🚀 Deploy on EC2
         if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
@@ -107,22 +107,20 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            echo "🔄 Starting deployment on EC2..."
+            echo "🚀 Deploying on EC2..."
 
             cd /home/ec2-user
 
             if [ -d "khushi-Restaurant" ]; then
-              echo "📥 Pulling latest code..."
               cd khushi-Restaurant
               git pull origin main
             else
-              echo "📦 Cloning fresh repo..."
               git clone https://github.com/${{ github.repository }} khushi-Restaurant
               cd khushi-Restaurant
             fi
 
-            echo "🐳 Restarting Docker Compose..."
+            echo "🔁 Restart Docker Compose"
             docker compose down || true
             docker compose up -d --build
 
-            echo "✅ Deployment complete!"
+            echo "✅ Deployment Completed!"
